finish unix build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
-cmake_minimum_required(3.5)
-
+cmake_minimum_required(VERSION 3.5)
 project(robot-sr)
 
 include(cmake/external.cmake)
+
+include_directories(${CMAKE_JS_INC})
+message(STATUS ${CMAKE_JS_INC})
+file(GLOB SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.cpp)
+
+add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
+set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
+target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB})
