--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "robot-sr",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "demo/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install": "mkdir build && cd build && conan install .. --build missing && cmake-js compile -d ..",
+    "compile": "cd build && cmake-js compile -d ..",
+    "dialog": "electron test.js",
+    "test": "export ELECTRON_ENABLE_LOGGING=true && electron main.js"
   },
   "cmake-js": {
     "runtime": "electron",
