--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "demo/main.js",
   "scripts": {
-    "install": "mkdir build && cd build && conan install .. --build missing && cmake-js compile -d ..",
+    "install": "mkdir build && cd build && cmake-js compile -d ..",
     "compile": "cd build && cmake-js compile -d ..",
     "dialog": "electron test.js",
     "test": "export ELECTRON_ENABLE_LOGGING=true && electron main.js"
